--- a/theme/partials/header.html
+++ b/theme/partials/header.html
@@ -72,6 +72,21 @@
             text-align: center;
             margin-top: 25px;
           }
+          .contenedor_youtube {
+            position: relative !important;
+            padding-bottom: 56.25% !important; /*panorámico*/
+            padding-top: 0px !important;
+            height: 0 !important;
+            margin-top: -20px;
+            margin-bottom: 25px;
+          }
+          .contenedor_youtube iframe {
+            position: absolute !important;
+            top: 0 !important;
+            left: 0 !important;
+            width: 100% !important;
+            height: 100% !important;
+          }
         </style>
       </div>
     </div>
