--- a/theme/partials/header.html
+++ b/theme/partials/header.html
@@ -32,8 +32,24 @@
         <div
           class="md-flex__ellipsis md-header-nav__title"
           data-md-component="title"
-          style="text-align: right"
+          style="text-align: left"
         >
+        <!-- https://fontawesome.com/v4.7.0/ -->
+          <a 
+            class="nav__btn" 
+            href="/" 
+            style="margin-left:1em;" 
+            title="Archivos de Hektor Profe">
+            <i class="fa fa-bars" aria-hidden="true" style="color:#0193CA"></i> Recopilación de archivos
+          </a>
+          <a 
+            class="nav__btn" 
+            href="#" 
+            onclick="modalButtonOnly.open()"
+            style="margin-left:1.35em;" 
+            title="Cursos de Hektor Profe">
+            <i class="fa fa-star" aria-hidden="true" style="color:rgb(84, 199, 84)"></i> Ofertas cursos Python en Udemy
+          </a>
           <a href="/"
             ><img
               class="nav__logo"
