--- a/theme/partials/header.html
+++ b/theme/partials/header.html
@@ -40,7 +40,7 @@
             href="/" 
             style="margin-left:1em;" 
             title="Archivos de Hektor Profe">
-            <i class="fa fa-bars" aria-hidden="true" style="color:#0193CA"></i> Recopilación de archivos
+            <i class="fa fa-search" aria-hidden="true" style="color:#0193CA"></i> Buscar en mis apuntes
           </a>
           <a 
             class="nav__btn" 
@@ -48,7 +48,7 @@
             onclick="modalButtonOnly.open()"
             style="margin-left:1.35em;" 
             title="Cursos de Hektor Profe">
-            <i class="fa fa-university" aria-hidden="true" style="color:#0193CA"></i> Ofertas cursos Python en Udemy
+            <i class="fa fa-university" aria-hidden="true" style="color:#0193CA"></i> Ofertas cursos Udemy
           </a>
           <a href="/"
             ><img
